log/build_2021-12-11_14-35-31/warehouse_robot_package/stderr.log
  File "/home/sam/AST_Robot_Warehouse/install/warehouse_robot_package/lib/python3.8/site-packages/warehouse_robot_package/order_console.py", line 104
    else
        ^
SyntaxError: invalid syntax

